fix(app.css): add visibility to try force display on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+#page {
+  visibility: visible !important;
+  }
+
 .App {
   background-color: var(--bg-color-offBlack);
 }
